--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,8 +41,8 @@ jobs:
           git config --local user.name ${{ github.actor }}
           git config --local user.email "${{ github.actor }}@users.noreply.github.com"
           git add test.xml
-          git commit -m "new data from job {{ github.job }}"
-          git push origin master
+          git commit -m "new data from job ${{ github.job }}"
+          git pull origin "${{ github.ref }}" --autostash --rebase -Xours
           git log --name-only
           git status
           
