--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -39,6 +39,7 @@ jobs:
           echo '</tv>' >> test.xml
           tv_sort --by-channel --duplicate-error --output new.xml test.xml
           mv new.xml test.xml
+          gzip -k test.xml
 
       - name: commit 
         run: |
@@ -50,3 +51,24 @@ jobs:
           git push origin "${{ github.ref }}"
           git log --name-only
           git status
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: test
+          release_name: test
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./test.xml.gz
+          asset_name: test.xml.gz
+          asset_content_type: application/gzip
