--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,6 @@ jobs:
           git commit -m "new data from job ${{ github.run_number }}"
           git pull origin "${{ github.ref }}" --autostash --rebase -Xours
           git push origin "${{ github.ref }}"
-          git push origin :refs/tags/test
           git log --name-only
           git status
 
@@ -64,6 +63,7 @@ jobs:
           release_name: test
           draft: false
           prerelease: false
+          overwrite: true
 
       - name: Upload Release Asset
         id: upload-release-asset 
