--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,25 +53,11 @@ jobs:
           git log --name-only
           git status
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload
+        uses: svenstaro/upload-release-action@v2
         with:
-          tag_name: test
-          release_name: test
-          draft: false
-          prerelease: false
-          overwrite: true
-
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: ./test.xml.gz
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./test.xml.gz
           asset_name: test.xml.gz
-          asset_content_type: application/gzip
+          tag: test
+          overwrite: true
